# render-latex.nvim

./: .gitignore  .luarc.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.local.md
.github/workflows/: ci.yml  release.yml
crates/render-latex-worker/: Cargo.toml
crates/render-latex-worker/src/: main.rs
doc/: render-latex.txt  tags
lua/render_latex/: annotations.lua  compat.lua  config.lua  detect.lua  health.lua  image_backend.lua  init.lua  install.lua  integrations.lua  renderer.lua  sources.lua  tmux.lua  ui.lua  util.lua  viewport.lua  worker.lua
lua/render_latex/image_backends/: kitty.lua  nvim.lua
lua/render_latex/integrations/: jupynvim.lua
plugin/: render_latex.lua
repro/: common.lua  jupynvim-display-math.ipynb  jupynvim.lua  light_theme.lua  long-note.md  long_note.lua  obsidian.lua  render-markdown-sample.md  render-markdown-smoke.md  render_markdown.lua  repro.lua  sample.md
repro/obsidian-vault/: index.md  linked-note.md
tests/: minit.lua  render_latex_spec.lua
